alteração de rotina

--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
 
 <div class="main">
 	
-	<div class="card">
+	<div id="card">
 		
 		<h3>Olá mundo</h3>
 
 	</div>
 
-	<div class="card">
+	<div id="card">
 		
 		<h3>Olá mundo</h3>
 
 	</div>
 
-	<div class="card">
+	<div id="card">
 		
 		<h3>Olá mundo</h3>
 
 	</div>
 
-	<div class="card">
+	<div id="card">
 		
 		<h3>Olá mundo</h3>
 
