modificado os cards

--- a/index.html
+++ b/index.html
@@ -4,43 +4,79 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Página Inicial</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="engines/style.css">
+	<!-- <meta http-equiv="refresh" content="5"> -->
+
 </head>
 
-<body>
-	<div class="header">
-	<h1>Bestiario D&D</h1>	
-	</div>
+	<body>
 
-<div class="main">
-	
-	<div id="card">
+		<div class="header">
+			<h1>Bestiario D&D</h1>	
+		</div>
+
+		<div class="main">
 		
-		<h3>Olá mundo</h3>
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
+
+		<div id="card">
+			<a href="dragoes.html"><img src="images/icone.png"></a>
+			<a href="dragoes.html"><h3>Dragões</h3></a>
+		</div>
 
 	</div>
-
-	<div id="card">
-		
-		<h3>Olá mundo</h3>
-
-	</div>
-
-	<div id="card">
-		
-		<h3>Olá mundo</h3>
-
-	</div>
-
-	<div id="card">
-		
-		<h3>Olá mundo</h3>
-
-	</div>
-
-
-
-
-</div>
-</body>
+	</body>
 </html>
