--- a/index.html
+++ b/index.html
@@ -3,80 +3,28 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Página Inicial</title>
+	<title>Mestre Lendário</title>
 	<link rel="stylesheet" type="text/css" href="engines/style.css">
-	<!-- <meta http-equiv="refresh" content="5"> -->
-
+	<meta http-equiv="refresh" content="5">
 </head>
-
 	<body>
 
-		<div class="header">
-			<h1>Bestiario D&D</h1>	
+		<div id="barra">
+			<h1>Mestre Lendário</h1>
+			<a href="sobre.html">Sobre</a>
+			<a href="livros.html">Livros</a>
+			<a href="bestiario.html">Bestiarios</a>
+			<a style="background-color: Orange; color: #000000;" href="index.html">News</a>
 		</div>
 
-		<div class="main">
-		
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
+		<div id="content">
+			<h2>Primeiro Post</h2>
+			<p>Este side está sendo desenvolvido por uma pessoa apenas. Pessoa esta que está no primeiro periodo de Engenharia de Software, tenho em mente criar um portal de fácil acesso para D&D, que seja dedicado e que seja desenvolvido de uma forma simples para todos.</p>
+			<p>Com o tempo vou está atualizando o site para que fique como eu imagino, mais mesmo assim caso queira ajudar no projeto vá até a página sobre e entre no grupo do discord, toda ajuda é bem vinda.</p>
+			<p>Minha metá a principio é colocar certos materiais de forma fácil para ser acessado e que tenha suporte para outras linguas também.</p>
+
+
 		</div>
 
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-		<div id="card">
-			<a href="dragoes.html"><img src="images/icone.png"></a>
-			<a href="dragoes.html"><h3>Dragões</h3></a>
-		</div>
-
-	</div>
 	</body>
 </html>
